--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         <!-- result div create -->
         <div class="tasks p-10 flex gap-4 flex-wrap items-center justify-center">
             <!-- check the file length is not 0 -->
-            <% if( files.length ) { %>
+            <% if( files.length > 0 ) { %>
                 <% files.forEach((file)=>{ %>
                     <!-- card style -->
                     <div class="task w-72 px-4 py-3 bg-zinc-800 rounded-md text-center">
