--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -3,3 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+.headingText{
+    margin-bottom: -5%;
+    // background: red;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   
+}
