--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
 
 <body>
     <div class="main w-full min-h-screen bg-zinc-900">
+        <div class="textStyle">
+        <h1 class="text-white text-center pt-10 text-3xl headingText">Welcome to me Todo Notes</h1>
+    </div>
         <!-- form div create -->
         <div class="form p-10 text-white">.
             <!-- form create -->
