commit final file

--- a/views/update.ejs
+++ b/views/update.ejs
@@ -28,8 +28,8 @@
                 rows="5"
                     placeholder="Message"
                     name="details"
-                    value="<%= content %>"
-                    required></textarea>
+                    required><%= content %>
+                </textarea>
                 <!-- create a button -->
                 <button type="submit" class="mt-2 bg-yellow-500 px-5 rounded-md">update Task</button>
             </form>
